--- a/pages/admin/index.html
+++ b/pages/admin/index.html
@@ -1,67 +1,43 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>首台首页</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <link rel="stylesheet" href="../common/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../common/css/style.css">
+    <meta charset="UTF-8">
+    <title>登陆</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <link rel="stylesheet" href="../common/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../common/css/style.css">
 </head>
-<body id="admin_index">
-	<div id="head">
-		
-	</div>
-	<div id="body row">
+<body id="loginPage">
+    <div class="row">
+        <div class="col-md-4 col-md-offset-4 vertical-center col-xs-10 col-xs-offset-1">
+            <form action="">
+                <div class="form-group">
+                    <label for="inputUserName">请输入用户名</label>
+                    <input type="text" class="form-control" id="inputUserName" placeholder="用户名">
+                </div>
+                <div class="form-group">
+                    <label for="inputPassword">请输入密码</label>
+                    <input type="password" class="form-control" id="inputPassword" placeholder="密码">
+                </div>
+                <div class="form-group">
+                    <div class="col-md-4 form-group">
+                        <input type="text" class="form-control" id="inputVerify" placeholder="验证码">
+                    </div>
+                    <img src="http://placehold.it/70x30" alt="70x30">
+                    <button>刷新</button>
+                </div>
+                <div class="form-group checkbox">
+                    <div class="checkbox"><label for=""><input type="checkbox" class="checkbox">记住账号密码</label></div>
+                    <button class="btn btn-default">登陆</button>
+                </div>
+                
+            </form>
+        </div>
+    </div>
 
-		<div class="col-md-12 bg-f5">
-			<div class="col-md-3">
-				<ol class="breadcrumb">
-					<li><a href="#">首页</a></li>
-				  <li><a href="#">我的书</a></li>
-				  <li class="active">《图解CSS3》</li>
-				</ol>
-			</div>
-			<div class="col-md-9">
-				<div class="toop pull-right button-group">
-					<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-home"></span>首页</button>
-					<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span>前进</button>
-					<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-arrow-right">后退</span></button>
-					<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-refresh">刷新</span></button>
-					<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-log-out">退出</span></button>
-				</div>
-			</div>
-		</div>
-
-		<div class="col-md-3 col-padding-0">
-			<div class="panel panel-default">
-				<div class="panel-heading">管理员</div>
-				<div class="panel-body">
-					<dl>
-						<dt><i class="glyphicon glyphicon-minus"></i> 商品管理</dt>
-						<dd>商品修改</dd>
-						<dd>商品分类</dd>
-					</dl>
-					<dl>
-						<dt><i class="glyphicon glyphicon-plus"></i> 商品管理</dt>
-					</dl>
-				</div>
-			</div>
-		</div>
-		<div class="col-md-9 col-padding-0">
-			<div class="panel panel-default">
-				<div class="panel-heading">产品管理</div>
-				<div class="panel-body">
-					
-				</div>
-			</div>
-		</div>
-
-
-
-	</div>
-
-  <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-  <script src="../common/js/bootstrap.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+    <script src="../common/js/bootstrap.min.js"></script>
 </body>
 </html>
